# @Author: JanKinCai
# @Date:   2019-12-12 21:08:32
# @Last Modified by:   JanKinCai
# @Last Modified time: 2019-12-12 23:08:08
# Setup
[metadata]
description-file = README.rst

[bdist_wheel]
universal = 1

# Sphinx
[build_sphinx]
source-dir = docs/source
build-dir = docs/build
all_files = 1

[upload_sphinx]
upload-dir = docs/build/html

# Test
[flake8]
max-line-length = 120
ignore = W292,E303, E2301
exclude =
    __init__.py
    setup.py

# Bumpversion
[bumpversion]
current_version = 0.1.0
commit = True
tag = True

[bumpversion:file:setup.py]

[bumpversion:file:docs/source/conf.py]

[bumpversion:file:interact/__init__.py]
